--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -38,7 +38,7 @@
   width: 48px;
   height: 48px;
   border: 0;
-  background-image: url("https://image.flaticon.com/icons/svg/149/149852.svg");
+  background-image: url("../../img/search.svg");
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
